--- a/AddPerson/templates/AddPerson/services.html
+++ b/AddPerson/templates/AddPerson/services.html
@@ -1,4 +1,4 @@
-<!Show forms for new services and addmissions services here>
+<!--Show forms for new services and addmissions services here-->
 <h1>
 Current Services:
 </h1>
