--- a/AddPerson/templates/AddPerson/index.html
+++ b/AddPerson/templates/AddPerson/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2> Welcome! </h2>
+<h1> Welcome! What would you like to do?</h1>
 
 <input class='button' type="button" value='add' onclick="location.href='/add';">
 <input class='button' type="button" value='search' onclick="location.href='/search';">
