--- a/AddPerson/static/AddPerson/css/main.css
+++ b/AddPerson/static/AddPerson/css/main.css
@@ -1,4 +1,10 @@
+/*@font-face {
+  font-family: 'custom';
+  src: url('../fonts/Lekton/Lekton-Regular.ttf');
+}*/
+
 body{
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
   background: url('/../../static/AddPerson/images/background2.jpg');
   background-size: 100%;
 }
@@ -13,6 +19,11 @@ a:visited  {
 
 a:hover{
   color:000;
+}
+
+h1 {
+  font-weight: 200;
+  font-size: 16pt;
 }
 
 .button {
@@ -46,7 +57,6 @@ a:hover{
   top: 100px;
   width: 500px;
   margin:auto;
-  /*border: solid 2px #000;*/
   box-shadow: 10px 10px 40px #000;
   border-radius: 8px;
 }
@@ -57,15 +67,15 @@ a:hover{
 
 #title {
   position: absolute;
-  right: 50px;
-  top: 80px;
+  right: 40px;
+  top: 70px;
   display: inline-block;
-  font-size: 20pt;
+  font-size: 24pt;
 }
 
 #content {
   text-align: center;
-  width: 80%;
+  width: 90%;
   margin: auto;
 }
 
