--- a/AddPerson/templates/AddPerson/add_index.html
+++ b/AddPerson/templates/AddPerson/add_index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1> Add </h1>
 {% for i in urls %}
-<input class='button' type="button" value= {{ i }}>
+<input class='button addbutton' type="button" value= {{ i }}>
 {% endfor %}
 
 {% endblock content %}
