--- a/AddPerson/templates/AddPerson/index.html
+++ b/AddPerson/templates/AddPerson/index.html
@@ -4,7 +4,7 @@
 
 <h1> Welcome! What would you like to do?</h1>
 
-<input class='button' type="button" value='add' onclick="location.href='/add';">
-<input class='button' type="button" value='search' onclick="location.href='/search';">
+<input class='button' type="button" value='Add' onclick="location.href='/add';">
+<input class='button' type="button" value='Search' onclick="location.href='/search';">
 
 {% endblock content %}
