--- a/AddPerson/static/AddPerson/css/main.css
+++ b/AddPerson/static/AddPerson/css/main.css
@@ -55,7 +55,7 @@ h1 {
   background-color: #fff;
   padding: 20px;
   top: 100px;
-  width: 500px;
+  width: 50%;
   margin:auto;
   box-shadow: 10px 10px 40px #000;
   border-radius: 8px;
@@ -87,6 +87,10 @@ h1 {
   padding: 5px;
   border: none;
   border-bottom: solid 1px #ccc;
+}
+
+.searchbox:focus {
+  outline: none
 }
 
 .searchdrop {
