--- a/AddPerson/templates/AddPerson/search_result.html
+++ b/AddPerson/templates/AddPerson/search_result.html
@@ -1,3 +1,7 @@
+{% extends 'AddPerson/base.html' %}
+
+{% block content %}
+
 <h1>
 Displaying {{query}}
 </h1>
@@ -8,3 +12,5 @@ Displaying {{query}}
   </li>
 {% endfor %}
 </ul>
+
+{% endblock content %}
