--- a/AddPerson/templates/AddPerson/base.html
+++ b/AddPerson/templates/AddPerson/base.html
@@ -2,7 +2,7 @@
 <title>MBA Exchange</title>
 {% load static %}
 
-<link rel="shortcut icon" type="image/png" href="/../../static/AddPerson/images/favicon.png" />
+<link rel="shortcut icon" type="image/png" href="{% static 'AddPerson/images/favicon.png' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'AddPerson/css/main.css' %}" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="{% static 'AddPerson/scripts/add.js' %}"></script>
@@ -12,7 +12,7 @@
 <body>
   <div id='box'>
     <a href='/'>
-      <img id='logo' src='/../../static/AddPerson/images/favicon.png' />
+      <img id='logo' src="{% static 'AddPerson/images/no-outline.png' %}" />
       <h1 id='title'> Client Manager </h1>
     </a>
     <hr>
