--- a/AddPerson/templates/AddPerson/services.html
+++ b/AddPerson/templates/AddPerson/services.html
@@ -1,10 +1,14 @@
+{% extends 'AddPerson/base.html' %}
+
+{% block content %}
+
 <!--Show forms for new services and addmissions services here-->
 <h1>
 Current Services:
 </h1>
 <form method="post" action='.'>{% csrf_token %}
     {{ form1 }}
-    <input type="submit" name='add_addmission' value="Add Addmissions" />
+    <input type="submit" name='add_addmission' value="Add Admissions" />
 </form>
 <form method="post" action='.'>{% csrf_token %}
     {{ form2 }}
@@ -33,3 +37,5 @@ Current Services:
   {{field}}
   {% endfor %}
 </ul>
+
+{% endblock content %}
