--- a/AddPerson/templates/AddPerson/search_result.html
+++ b/AddPerson/templates/AddPerson/search_result.html
@@ -5,9 +5,9 @@
 <h1>
 Displaying {{query}}
 </h1>
-<ul>
+<ul id='searchresults'>
 {% for person in person_set %}
-    <a href = "/edit/{{person.id}}/"> {{person.first_name}}<b> </b>{{person.last_name}} </a><br>
+  <li><a href = "/edit/{{person.id}}/"> {{person.first_name}}<b> </b>{{person.last_name}} </a><br>
 {% endfor %}
 </ul>
 
