--- a/AddPerson/static/AddPerson/css/main.css
+++ b/AddPerson/static/AddPerson/css/main.css
@@ -1,16 +1,19 @@
-/*@font-face {
-  font-family: 'custom';
-  src: url('../fonts/Lekton/Lekton-Regular.ttf');
-}*/
+/****************************************************************/
+/***********************---GENERAL---****************************/
+/****************************************************************/
 
 body{
+  font-weight: 200;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
   background: url('/../../static/AddPerson/images/background2.jpg');
   background-size: 100%;
+  list-style: square;
 }
 
 a {
+  font-weight: 400;
   color:#000;
+  text-decoration: none;
 }
 
 a:visited  {
@@ -18,7 +21,7 @@ a:visited  {
 }
 
 a:hover{
-  color:000;
+  color:#b5a394;
 }
 
 h1 {
@@ -26,10 +29,25 @@ h1 {
   font-size: 16pt;
 }
 
+input {
+  line-height: 13pt;
+  margin: 2px;
+  border: none;
+  border-bottom: solid 1px #ccc;
+}
+
+input:focus {
+  outline: none;
+  box-shadow:  0px 0px 10px #b5a394;
+}
+
 .button {
-  padding: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
+  font-weight: 300;
+  font-size: 10pt;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
+  padding: 3px;
+  padding-right: 7px;
+  padding-left: 7px;
   border: none;
   background-color: #fff;
   border: solid 1px #aaaaaa;
@@ -59,6 +77,7 @@ h1 {
   margin:auto;
   box-shadow: 10px 10px 40px #000;
   border-radius: 8px;
+  min-width: 350px;
 }
 
 #logo {
@@ -83,6 +102,10 @@ h1 {
   display: none
 }
 
+/****************************************************************/
+/***************************--SEARCH--***************************/
+/****************************************************************/
+
 .searchbox {
   padding: 5px;
   border: none;
@@ -95,4 +118,17 @@ h1 {
 
 .searchdrop {
   padding-top: 15px
+}
+
+#searchresults {
+  text-align: left
+}
+
+
+/****************************************************************/
+/*************************---ADD---******************************/
+/****************************************************************/
+
+#addform {
+  text-align: left
 }
