--- a/AddPerson/templates/AddPerson/add_client.html
+++ b/AddPerson/templates/AddPerson/add_client.html
@@ -1,9 +1,10 @@
 {% extends 'AddPerson/base.html' %}
 
 {% block content %}
-
-<form method="post" action="">{% csrf_token %}
+<h1>{{type}}</h1>
+<form method="post" action="" id='add-form'>{% csrf_token %}
     {{ form }}
+    <br><br>
     <input class='button' type="submit" name='Submit one' value="Save and Continue" />
     <input class='button' type="submit" name='Submit another' value="Save and Add Another" />
 </form>
