--- a/AddPerson/templates/AddPerson/base.html
+++ b/AddPerson/templates/AddPerson/base.html
@@ -13,6 +13,8 @@
   <div id='box'>
     <a href='/'>
       <img id='logo' src="{% static 'AddPerson/images/no-outline.png' %}" />
+    </a>
+    <a href='/'>
       <h1 id='title'> Client Manager </h1>
     </a>
     <hr>
