--- a/AddPerson/templates/AddPerson/services.html
+++ b/AddPerson/templates/AddPerson/services.html
@@ -8,7 +8,7 @@ Current Services:
 </h1>
 <form method="post" action='.'>{% csrf_token %}
     {{ form1 }}
-    <input type="submit" name='add_addmission' value="Add Admissions" />
+    <input type="submit" name='add_addmission' value="Add Addmissions" />
 </form>
 <form method="post" action='.'>{% csrf_token %}
     {{ form2 }}
