--- a/AddPerson/templates/AddPerson/add_client.html
+++ b/AddPerson/templates/AddPerson/add_client.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>{{type}}</h1>
 <form method="post" action="" id='add-form'>{% csrf_token %}
-    {{ form }}
+    {{ form.as_ul}}
     <br><br>
     <input class='button' type="submit" name='Submit one' value="Save and Continue" />
     <input class='button' type="submit" name='Submit another' value="Save and Add Another" />
