more form stuff

--- a/AddPerson/static/AddPerson/css/main.css
+++ b/AddPerson/static/AddPerson/css/main.css
@@ -90,10 +90,11 @@ input:focus {
   width: inherit;
   top: 96px;
   background-color: #fff;
+  min-width: 360px;
 }
 
 #logo {
-  width: 100px;
+  width: 120px;
   padding-top: 15px;
 }
 
