--- a/AddPerson/templates/AddPerson/services.html
+++ b/AddPerson/templates/AddPerson/services.html
@@ -6,36 +6,37 @@
 <h1>
 Current Services:
 </h1>
-<form method="post" action='.'>{% csrf_token %}
-    {{ form1.as_ul }}
-    <input type="submit" class='button' name='add_addmission' value="Add Addmissions" />
-</form>
-<form method="post" action='.'>{% csrf_token %}
-    {{ form2.as_ul }}
-    <input type="submit" class='button' name='add_service' value="Add Service" />
-</form>
-<ul>
-{% for service in services %}
-  <li>
-    <form method="post" action='.'>{% csrf_token %}
-      {{service}}
-      <input type='submit' class='button' name='delete service {{service.id}}' value="x" />
-    </form>
-  </li>
-{% endfor %}
-{% for a_service in addmissions_services %}
-  <li>
-    <form method="post" action='.'>{% csrf_token %}
-      {{a_service}}
-      <input type='submit' class='button' name='delete addmissions service {{a_service.id}}' value="x" />
-    </form>
-  </li>
-{% endfor %}
-</ul>
-<ul>
-  {% for field in client_display %}
-  {{field}}
+<div id='services-form'>
+  <form method="post" action='.'>{% csrf_token %}
+      {{ form1.as_ul }}
+      <input type="submit" class='button' name='add_addmission' value="Add Addmissions" />
+  </form>
+  <form method="post" action='.'>{% csrf_token %}
+      {{ form2.as_ul }}
+      <input type="submit" class='button' name='add_service' value="Add Service" />
+  </form>
+  <ul>
+  {% for service in services %}
+    <li>
+      <form method="post" action='.'>{% csrf_token %}
+        {{service}}
+        <input type='submit' class='button' name='delete service {{service.id}}' value="x" />
+      </form>
+    </li>
   {% endfor %}
-</ul>
-
+  {% for a_service in addmissions_services %}
+    <li>
+      <form method="post" action='.'>{% csrf_token %}
+        {{a_service}}
+        <input type='submit' class='button' name='delete addmissions service {{a_service.id}}' value="x" />
+      </form>
+    </li>
+  {% endfor %}
+  </ul>
+  <ul>
+    {% for field in client_display %}
+    {{field}}
+    {% endfor %}
+  </ul>
+</div>
 {% endblock content %}
