--- a/AddPerson/templates/AddPerson/base.html
+++ b/AddPerson/templates/AddPerson/base.html
@@ -7,6 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="{% static 'AddPerson/scripts/add.js' %}"></script>
   <script src="{% static 'AddPerson/scripts/search.js' %}"></script>
+<!--   <script src="{% static 'AddPerson/scripts/jquery-scrolltofixed-min.js' %}"></script>
+  <script src="{% static 'AddPerson/scripts/scroll.js' %}"></script> -->
 </head>
 
 <body>
